--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,8 @@
     padding: 0;
 }
 
+/* Inizio Header */
+
 #background-header{
     display: block;
     margin: 0;
@@ -19,6 +21,8 @@
     bottom: 15px;
     left: 10px;
 }
+
+/* Titolo */
 
 h1{
     margin-left: 10px;
@@ -37,8 +41,17 @@ h2, #data{
     margin-bottom: 20px;
 }
 
-#autore{
+
+/* Inizio Main */
+
+/* Sezione */
+
+main{
     margin-left: 10px;
+}
+
+#autore{
+
     color: cyan;
     margin-left: 0;
 }
@@ -47,7 +60,43 @@ h2, #data{
     height: 500px;
 }
 
-section{
-    margin-left: 10px;
+/* Articolo */
+
+article{
+    margin-top: 40px;
+}
+
+article span{
+    background-color: yellow;
+}
+
+/* Lista */
+
+.space{
+    margin-top: 40px;
+    margin-left: 15px;
+    margin-bottom: 40px;
+}
+
+/* Tabella */
+
+table{
+    width: 90vw;
+    margin-bottom: 40px;
+}
+
+th{
+    background-color: rgb(0, 174, 255);
+    color: white;
+    text-align: left;
+}
+
+.th-space{
+    padding-right: 200px;
+    width: 25%;
+}
+
+.td-cyan{
+    background-color: rgb(155, 255, 255);
 }
 
